--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,9 @@
  "routes": [
   {
    "src": "/(.*)",
-   "dest": "index.js"
+   "dest": "index.js",
+    "methods": ["GET", "POST", "DELETE", "PUT", "PATCH", "OPTIONS"],
+    "headers": { "Access-Control-Allow-Origin": "*" }
   }
  ]
 }
